[package]
name = "crates_io_test_db"
version = "0.0.0"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
diesel = { version = "=2.1.3", features = ["postgres", "r2d2"] }
diesel_migrations = { version = "=2.1.0", features = ["postgres"] }
dotenvy = "=0.15.7"
once_cell = "=1.18.0"
rand = "=0.8.5"
tracing = "=0.1.40"
url = "=2.4.1"
