[package]
name = "crates_io_worker"
version = "0.0.0"
license = "MIT OR Apache-2.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
anyhow = "=1.0.77"
async-trait = "=0.1.75"
diesel = { version = "=2.1.4", features = ["postgres", "r2d2", "serde_json"] }
futures-util = "=0.3.30"
sentry-core = { version = "=0.32.1", features = ["client"] }
serde = { version = "=1.0.193", features = ["derive"] }
serde_json = "=1.0.108"
thiserror = "=1.0.51"
tokio = { version = "=1.35.1", features = ["rt", "time"]}
tracing = "=0.1.40"

[dev-dependencies]
crates_io_test_db = { path = "../crates_io_test_db" }
tokio = { version = "=1.35.1", features = ["macros", "rt", "sync"]}
