[package]
name = "crates_io_worker"
version = "0.0.0"
license = "MIT OR Apache-2.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
anyhow = "=1.0.79"
async-trait = "=0.1.77"
diesel = { version = "=2.1.4", features = ["postgres", "r2d2", "serde_json"] }
futures-util = "=0.3.30"
sentry-core = { version = "=0.32.2", features = ["client"] }
serde = { version = "=1.0.196", features = ["derive"] }
serde_json = "=1.0.113"
thiserror = "=1.0.57"
tokio = { version = "=1.36.0", features = ["rt", "time"]}
tracing = "=0.1.40"

[dev-dependencies]
crates_io_test_db = { path = "../crates_io_test_db" }
tokio = { version = "=1.36.0", features = ["macros", "rt", "sync"]}
