[package]
edition = "2021"
name = "cargo-manifest"
version = "0.19.1"
authors = ["Kornel <kornel@geekhood.net>", "Luca Palmieri <rust@lpalmieri.com>"]
description = "Helper crate to parse and manipulate manifests - `Cargo.toml` files."
license = "Apache-2.0 OR MIT"

[lints]
workspace = true

[dependencies]
serde = { version = "1.0.114", features = ["derive"] }
thiserror = "2.0.9"
toml = { version = "1.1.2", default-features = false, features = [
  "parse",
  "serde",
  "preserve_order",
] }

[dev-dependencies]
insta = "1.39.0"
tempfile = "3.10.1"
toml = { version = "1.1.2", default-features = false, features = ["display"] }
