[package]
name = "crates_io_api_types"
version = "0.0.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-lang/crates.io"
description = "API response types for crates.io"
edition = "2024"

[lints]
workspace = true

[dependencies]
chrono = { version = "=0.4.45", default-features = false, features = ["serde"] }
crates_io_database = { path = "../crates_io_database" }
hex = "=0.4.3"
indexmap = { version = "=2.14.0", features = ["serde"] }
semver = { version = "=1.0.28", features = ["serde"] }
sentry-core = "=0.48.3"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.150"
url = "=2.5.8"
utoipa = { version = "=5.5.0", features = ["chrono"] }

[dev-dependencies]
claims = "=0.8.0"
