[package]
name = "crates_io_cdn_logs"
version = "0.0.0"
license = "MIT OR Apache-2.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
anyhow = "=1.0.99"
async-compression = { version = "=0.4.30", features = ["gzip", "tokio", "zstd"] }
chrono = { version = "=0.4.42", features = ["serde"] }
derive_more = { version = "=2.0.1", features = ["deref"] }
percent-encoding = "=2.3.2"
semver = "=1.0.27"
serde = { version = "=1.0.223", features = ["derive"] }
serde_json = "=1.0.145"
tokio = { version = "=1.47.1", features = ["io-util"] }
tracing = "=0.1.41"

[dev-dependencies]
claims = "=0.8.0"
clap = { version = "=4.5.47", features = ["derive"] }
criterion = { version = "=0.7.0", features = ["async_tokio"] }
insta = "=1.43.2"
tokio = { version = "=1.47.1", features = ["fs", "macros", "rt", "rt-multi-thread"] }
tracing-subscriber = { version = "=0.3.20", features = ["env-filter"] }

[[bench]]
name = "count_downloads"
harness = false
