[package]
name = "crates_io_cdn_logs"
version = "0.0.0"
license = "MIT OR Apache-2.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
anyhow = "=1.0.100"
async-compression = { version = "=0.4.37", features = ["gzip", "tokio", "zstd"] }
chrono = { version = "=0.4.43", features = ["serde"] }
derive_more = { version = "=2.1.1", features = ["deref"] }
percent-encoding = "=2.3.2"
semver = "=1.0.27"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
tokio = { version = "=1.49.0", features = ["io-util"] }
tracing = "=0.1.44"

[dev-dependencies]
claims = "=0.8.0"
clap = { version = "=4.5.56", features = ["derive"] }
criterion = { version = "=0.8.1", features = ["async_tokio"] }
insta = "=1.46.3"
tokio = { version = "=1.49.0", features = ["fs", "macros", "rt", "rt-multi-thread"] }
tracing-subscriber = { version = "=0.3.22", features = ["env-filter"] }

[[bench]]
name = "count_downloads"
harness = false
