[package]
name = "crates_io_cdn_logs"
version = "0.0.0"
license = "MIT OR Apache-2.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
anyhow = "=1.0.103"
async-compression = { version = "=0.4.42", features = ["gzip", "tokio", "zstd"] }
chrono = { version = "=0.4.45", features = ["serde"] }
derive_more = { version = "=2.1.1", features = ["deref"] }
foldhash = "=0.2.0"
percent-encoding = "=2.3.2"
semver = "=1.0.28"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.150"
tokio = { version = "=1.52.3", features = ["io-util"] }
tracing = "=0.1.44"

[dev-dependencies]
claims = "=0.8.0"
clap = { version = "=4.6.1", features = ["derive"] }
criterion = { version = "=0.8.2", features = ["async_tokio"] }
insta = "=1.48.0"
tokio = { version = "=1.52.3", features = ["fs", "macros", "rt", "rt-multi-thread"] }
tracing-subscriber = { version = "=0.3.23", features = ["env-filter"] }

[[bench]]
name = "count_downloads"
harness = false
