[package]
name = "crates_io_database"
version = "0.0.0"
license = "MIT OR Apache-2.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
bon = "=3.7.2"
chrono = { version = "=0.4.42", default-features = false, features = ["serde"] }
crates_io_diesel_helpers = { path = "../crates_io_diesel_helpers" }
crates_io_index = { path = "../crates_io_index" }
diesel = { version = "=2.2.12", features = ["serde_json", "chrono", "numeric"] }
diesel-async = { version = "=0.6.1", features = ["postgres"] }
diesel_full_text_search = "=2.2.0"
futures-util = "=0.3.31"
rand = "=0.9.2"
secrecy = "=0.10.3"
semver = { version = "=1.0.27", features = ["serde"] }
serde = { version = "=1.0.221", features = ["derive"] }
serde_json = "=1.0.145"
sha2 = "=0.10.9"
thiserror = "=2.0.16"
tracing = "=0.1.41"
unicode-xid = "=0.2.6"
utoipa = { version = "=5.4.0", features = ["chrono"] }

[dev-dependencies]
claims = "=0.8.0"
crates_io_test_db = { path = "../crates_io_test_db" }
googletest = "=0.14.2"
insta = { version = "=1.43.2", features = ["json"] }
tokio = { version = "=1.47.1", features = ["macros", "rt"] }
