[package]
name = "crates_io_database"
version = "0.0.0"
license = "MIT OR Apache-2.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
bon = "=3.8.2"
chrono = { version = "=0.4.43", default-features = false, features = ["serde"] }
crates_io_diesel_helpers = { path = "../crates_io_diesel_helpers" }
crates_io_index = { path = "../crates_io_index" }
crates_io_validation = { path = "../crates_io_validation" }
diesel = { version = "=2.3.6", features = ["serde_json", "chrono", "numeric"] }
diesel-async = { version = "=0.7.4", features = ["postgres"] }
diesel_full_text_search = "=2.3.0"
futures-util = "=0.3.31"
rand = "=0.10.0"
secrecy = "=0.10.3"
semver = { version = "=1.0.27", features = ["serde"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
sha2 = "=0.10.9"
thiserror = "=2.0.18"
tracing = "=0.1.44"
utoipa = { version = "=5.4.0", features = ["chrono"] }

[dev-dependencies]
claims = "=0.8.0"
crates_io_test_db = { path = "../crates_io_test_db" }
googletest = "=0.14.2"
insta = { version = "=1.46.3", features = ["filters", "json"] }
tokio = { version = "=1.49.0", features = ["macros", "rt"] }
